# MatrixOps

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: bench_gemm.cpp
include/matrix/: Matrix.hpp  MatrixExpression.hpp  MatrixScalarAdd.hpp  MatrixScalarDivide.hpp  MatrixScalarMultiply.hpp  MatrixSubtract.hpp  MatrixSum.hpp  MatrixTranspose.hpp
src/: examples.cpp  main.cpp
tests/: test_io.cpp  test_linalg.cpp  test_ops.cpp
